--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
+									<a href="https://github.com/khihi154/My-portfolio/blob/main/index.html" class="image">
 										<img src="images/download.jpg" alt="" />
 									</a>
 									<div class="caption">
