--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 							<ul class="icons">
 								<li><a href="https://twitter.com/kangkyoin" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/thaibaongoc.khang.7/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ngoc-khang-a3484a305/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
 					</footer>
